--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -95,3 +95,14 @@ $primary-color: #87D37C;
     float: left;
   }
 }
+
+
+ .welcome {
+  color: $primary-color;
+
+ }
+
+ .button {
+  color: $primary-color;
+
+ }
