Bookmark CRUD working ugly

--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -17,6 +17,8 @@
       </div>
       <div class="small-2 columns">
        <%= b.submit "Save", class: 'button round success' %>
+       <br>
+       <%= link_to "Delete", topic_bookmark_path(@topic, bookmark), method: :delete,  class: 'button round alert', data: {confirm: 'Are you sure you want to do that?'} %>
       </div>
     <% end %>
   </div>
