--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,9 +1,23 @@
 <h2><%= "##{@topic.title}" %></h2>
+<div class="small-4 small-offset-1 rows">
+<div class="row">
+    <ul class="small-block-grid-3">
+    <% @topic.bookmarks.each do |bookmark| %>
+      <li>
+        <%= link_to bookmark.url, "http://#{bookmark.url}", target: "_blank" %></br>
+    <%= image_tag(display("#{bookmark.url}").thumbnail_url, size: "150").html_safe %></li>
+    <%= link_to "Delete", [@topic, bookmark],  method: :delete, data: {confirm: 'Are you sure you want to do that?'}, redirect_to : %>
+  </ul>
+  <% end %> 
+</div>
+</div>
 
-<% @topic.bookmarks.each do |bookmark| %>
-<%= link_to bookmark.url, "http://#{bookmark.url}", target: "_blank" %></br>
-<%= image_tag(display("#{bookmark.url}").thumbnail_url, size: "150").html_safe %><%= image_tag(display("#{bookmark.url}").thumbnail_url, size: "150").html_safe %>
-<% end %> 
-
+<br>
+<div class="row">
+  <div class="medium 4 columns">
 <%= link_to "Create Bookmark", new_topic_bookmark_path(@topic), class: 'button round success' %>
+<br>
+<%= link_to "Delete", [@topic, @bookmark], method: :delete,  class: 'button round alert', data: {confirm: 'Are you sure you want to do that?'} %>
+</div>
+</div>
 
