--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,19 +1,20 @@
 <h2><%= "##{@topic.title}" %></h2>
   <div class="small-4 small-offset-1 rows">
     <div class="row">
-      <ul class="small-block-grid-3">
      <% @topic.bookmarks.each do |bookmark| %>
-      <li>
+     <%= render partial: 'likes/like', locals: { bookmark: @bookmark } %>
+     
         <%= link_to bookmark.url, "http://#{bookmark.url}", target: "_blank" %></br>
-    <%= image_tag(display("#{bookmark.url}").thumbnail_url, size: "150").html_safe %></li>
+    <%= image_tag(display("#{bookmark.url}").thumbnail_url, size: "150").html_safe %>
     <% if policy(@topic).edit? %>
     <%= link_to "Delete", [@topic, bookmark],  method: :delete, data: {confirm: 'Are you sure you want to do that?'} %>
-        </ul>
+        <div class="row">
+        
+      </div>
       <% end %>
     <% end %> 
   </div>
 </div>
-
 <br>
 <div class="row">
   <div class="medium 4 columns">
